# scientific-assistant

./: .gitignore  CLAUDE.md  README.md  flake.nix
.github/workflows/: ci.yml  deploy-landing.yml  release.yml
bridge/: .prettierignore  default.nix  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
bridge/src/: language.ts  main.css  main.ts  theme.ts
cloudflare/: .dev.vars.example  package-lock.json  package.json  tsconfig.json
cloudflare/src/: index.ts
docs/archive/: mkElmDerivation-docs-json-support.md
docs/backlog/: devshell-configuration-notes.md  nixpkgs-wrangler-prettier-conflict.md
docs/plans/: 01-bootstrap-plan.md  02-cloudflare-proxy-plan.md  03-infrastructure-plan.md  04-redesign-plan.md  05-i18n-plan.md  06-main-shell-plan.md  07-message-list-plan.md  08-chat-features-plan.md  09-session-features-plan.md  10-tutorial-plan.md  11-e2e-tests-plan.md  2025-12-13-elm-tauri-migration-design.md  (+2 more)
elm-watch/: flake.nix
infra/tasks/: clean.yaml  (+10 more)
landing/: .prettierignore  default.nix  design-system.html  index.html  package-lock.json  package.json  styles.css  tsconfig.json  vite.config.ts
mprocs/: format.yaml
platform/: Cargo.toml  default.nix  tauri.conf.json
platform/icons/: icon.icns
platform/src/: lib.rs  main.rs
proxy/: default.nix  eslint.config.js  package-lock.json  package.json  tsconfig.json  wrangler.toml
run-parallel/: flake.nix
tasks/: check-bridge.yaml  check-platform.yaml  check-view.yaml  dev.yaml  flake.nix  format.yaml  setup.yaml
view/: default.nix  elm-watch.json  elm.json
(+62 files in other folders)
