[package]
name = "scientific-assistant"
version = "0.1.0"
description = "Scientific Assistant"
authors = ["Andrey Koppel"]
edition = "2021"

[lib]
name = "scientific_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = "debuginfo"
